--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,6 @@ dependencies {
     testCompile "org.mockito:mockito-core:$rootProject.mockito"
 
     // AssertJ
-    testCompile 'org.assertj:assertj-core:2.5.0'
+    testCompile "org.assertj:assertj-core:$rootProject.assertj"
 
 }
